kubernetes/apps/ai/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-ext
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 406"]
spec:
  hostnames: ["mcp.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-ext
          port: 4483
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-int
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 406"]
spec:
  hostnames: ["mcp-int.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-int
          port: 4483
